# launcher

./: .env.example  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: tg_notify.yml
public/: site.webmanifest
src/: .gitignore  app.model.tsx  app.tsx  declare.d.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/shared/: sprite.gen.ts
src/shared/components/: header.tsx  main.model.ts  main.tsx  news.model.ts  news.tsx
src/shared/const/: index.ts
src/shared/lib/: client.ts
src/shared/ui/: icon.tsx
