[package]
name = "app"
version = "0.1.0"
description = "Fasberry Launcher"
authors = ["Belkin"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-prevent-default = "4"
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2.3"
directories = "6.0"
futures-util = "0.3"

[profile.release] 
panic = "abort"
# codegen-units = 1
lto = true
opt-level = "z"
strip = true
